# src/routes/vagasRoutes.js
@@ -1,9 +1,9 @@
 const express =  require("express") 
 const router =  express.Router(); 
-const controller = require("../controller/CadastroVagas")
+const controller = require("../controller/controllersVagas")
 
-router.post("/cadastro", controller.cadastroVagas)
-router.get("/all", controller.findAllVagas)
+router.post("/", controller.cadastroVagas)
+router.get("/", controller.findAllVagas)
 router.get("/:nome", controller.findVagasNome)
 router.delete("/:id", controller.deleteVaga)
 router.patch("/:id", controller.atualizaVaga)
